Noticed the aside wasn't aligned so I fixed that in the CSS. Now I'm actually finished.

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -106,7 +106,7 @@ p {
 }
 
 .benefits article {
-    margin-bottom: 32px;
+    margin-bottom: 70px;
     color: #ffffff;
 }
 
